<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".EnterPersonDetail">


    <ImageView
        android:id="@+id/profile_photo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/ic_account_circle_black_24dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="64dp"
        android:layout_marginTop="32dp"/>


    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:hint="@string/name"
        android:inputType="text"
        android:textSize="16sp"
        android:autofillHints="@string/name"/>


    <EditText
        android:id="@+id/mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:hint="@string/my_number"
        android:inputType="number"
        android:textSize="16sp"
        android:autofillHints="@string/my_number"/>


    <Button
        android:id="@+id/save_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:background="#4CAF50"
        android:hint="@string/save"
        android:textSize="16sp" />

</LinearLayout>